--- a/index.html
+++ b/index.html
@@ -1212,16 +1212,16 @@
       "@type": "MobileApplication",
       "name": "CmdSharp",
       "alternateName": "CmdSharp - Voice Invoicing App",
-      "description": "Create invoices in under 10 seconds using your voice or smart commands. CmdSharp is the fastest invoicing app for freelancers, tradespeople, and small businesses.",
+      "description": "Create invoices in 6 seconds using your voice or smart commands. CmdSharp is the fastest invoicing app for freelancers, tradespeople, and small businesses.",
       "applicationCategory": "BusinessApplication",
       "applicationSubCategory": "Invoicing Software",
       "operatingSystem": "Android",
       "fileSize": "16MB",
       "softwareVersion": "2.0",
       "identifier": "com.proviska.cmdsharp",
-      "url": "https://cmdsharp.com",
-      "datePublished": "2024-01-01",
-      "dateModified": "2025-01-10",
+      "url": "https://play.google.com/store/apps/details?id=com.proviska.cmdsharp",
+      "datePublished": "2025-09-26",
+      "dateModified": "2025-09-26",
       "inLanguage": "en",
       "contentRating": "Everyone",
       "author": {
@@ -1247,10 +1247,10 @@
         "@type": "Offer",
         "price": "49",
         "priceCurrency": "USD",
-        "availability": "https://schema.org/PreOrder",
+        "availability": "https://schema.org/InStock",
         "priceValidUntil": "2025-12-31",
-        "url": "https://cmdsharp.com/#pricing",
-        "description": "Lifetime license with all features included"
+        "url": "https://play.google.com/store/apps/details?id=com.proviska.cmdsharp",
+        "description": "7-day free trial with full features, then lifetime license"
       },
       "screenshot": [
         "https://cmdsharp.com/images/dashboard.webp",
@@ -1261,7 +1261,7 @@
         "https://cmdsharp.com/images/settings.webp"
       ],
       "featureList": [
-        "Voice invoicing: Just say 'Invoice John Smith for web hosting $500' and CmdSharp generates a professional invoice instantly",
+        "Voice invoicing: Just say 'Invoice John Smith for web hosting $500' and CmdSharp generates a professional invoice in 6 seconds",
         "Smart commands: Type shortcuts like 'I @john #web $500' to build invoices faster than ever",
         "Professional quotes & invoices: Generate branded PDFs with your business name, logo, and details",
         "Easy sharing: Send invoices directly via WhatsApp, email, or PDF download",
@@ -1301,22 +1301,22 @@
     {
       "@context": "https://schema.org",
       "@type": "WebApplication",
-      "name": "CmdSharp Web Download",
-      "description": "Download CmdSharp - Fast invoice app for freelancers & trades — voice or smart command billing",
+      "name": "CmdSharp Download Page",
+      "description": "Download CmdSharp from Google Play Store - Fast invoice app with 6-second voice invoicing",
       "url": "https://cmdsharp.com/download.html",
       "applicationCategory": "BusinessApplication",
       "operatingSystem": "Android",
-      "browserRequirements": "Requires Android device for APK installation",
-      "installUrl": "https://cmdsharp.com/download.html",
+      "browserRequirements": "Android device with Google Play Store access",
+      "installUrl": "https://play.google.com/store/apps/details?id=com.proviska.cmdsharp",
       "offers": {
         "@type": "Offer",
         "price": "0",
         "priceCurrency": "USD",
         "availability": "https://schema.org/InStock",
-        "description": "Free trial download - upgrade to lifetime license"
+        "description": "7-day free trial with full features - available on Google Play Store"
       },
       "applicationSuite": "CmdSharp",
-      "softwareRequirements": "Android 5.0+, 16MB storage space"
+      "softwareRequirements": "Android 5.0+, Google Play Store, 16MB storage space"
     }
     </script>
 
@@ -1400,10 +1400,10 @@
         },
         {
           "@type": "Question",
-          "name": "When will CmdSharp be available?",
+          "name": "Is CmdSharp available now?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "CmdSharp is currently in final testing and is expected to launch on Google Play Store in September 2025. You can sign up to be notified when it becomes available."
+            "text": "Yes! CmdSharp is now available on Google Play Store. Download it today and start your 7-day free trial to experience 6-second voice invoicing."
           }
         },
         {
@@ -1466,14 +1466,14 @@
                 <li><a href="#testimonials">Reviews</a></li>
                 <li><a href="#pricing">Pricing</a></li>
                 <li>
-                    <a href="#pricing" class="btn btn-primary" style="color: var(--primary-dark); padding: 0.6rem 1.2rem; font-size: 0.9rem;">
-                        Coming Soon
+                    <a href="download.html" class="btn btn-primary" style="color: var(--primary-dark); padding: 0.6rem 1.2rem; font-size: 0.9rem;">
+                        Try Free
                     </a>
                 </li>
             </ul>
             <div class="demo-download-btn">
-                <a href="#pricing" class="btn btn-primary">
-                    Coming Soon
+                <a href="download.html" class="btn btn-primary">
+                    Try Free
                 </a>
             </div>
         </nav>
@@ -1496,9 +1496,9 @@
     <div class="news-banner" style="background: linear-gradient(135deg, rgba(139, 92, 246, 0.1), rgba(0, 212, 255, 0.05)); backdrop-filter: blur(20px); border-bottom: 1px solid var(--glass-border); padding: 1rem 2rem; position: relative; z-index: 999; transition: all 0.3s ease;">
         <div style="display: flex; align-items: center; justify-content: center; gap: 1rem; flex-wrap: wrap; text-align: center;">
             <span style="color: var(--neon-purple); font-size: 0.9rem; font-weight: 600;">🎮 GOOGLE PLAY STORE:</span>
-            <span style="color: var(--text-light); font-weight: 600; font-size: 1rem;">Beta Testing • Expected September 2025</span>
-            <a href="#pricing" style="color: var(--neon-green); font-size: 0.9rem; font-weight: 500; padding: 0.3rem 0.8rem; border: 1px solid var(--neon-green); border-radius: 15px; transition: all 0.3s ease; text-decoration: none;">
-                Notify Me →
+            <span style="color: var(--text-light); font-weight: 600; font-size: 1rem;">Launched September 2025</span>
+            <a href="https://play.google.com/store/apps/details?id=com.proviska.cmdsharp" target="_blank" style="display: inline-block;">
+                <img src="images/google-play.png" alt="Get it on Google Play" style="height: 32px; transition: transform 0.2s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
             </a>
         </div>
     </div>
@@ -1528,7 +1528,7 @@
             </div>
 
             <div class="cta-buttons">
-                <a href="#pricing" class="btn btn-primary">Get Notified</a>
+                <a href="download.html" class="btn btn-primary">Try Free Now</a>
                 <a href="#features" class="btn btn-secondary">See Features</a>
             </div>
             
@@ -1791,42 +1791,30 @@
 
     <section class="pricing" id="pricing">
         <div class="section-header fade-in">
-            <h2 class="section-title">Coming Soon to Google Play Store</h2>
-            <p class="section-subtitle">Revolutionary voice invoicing is almost ready for public release</p>
+            <h2 class="section-title">Now Available on Google Play Store!</h2>
+            <p class="section-subtitle">Start your 7-day free trial and experience revolutionary voice invoicing</p>
         </div>
 
         <div class="pricing-card fade-in">
-            <h3>Get Notified When We Launch</h3>
-            <p style="color: var(--text-muted); margin-bottom: 2rem;">Be the first to know when CmdSharp becomes available on Google Play Store</p>
+            <h3>Download CmdSharp Today</h3>
+            <p style="color: var(--text-muted); margin-bottom: 2rem;">Join thousands of professionals who invoice faster with AI-powered voice commands</p>
 
-            <form class="notify-form"
-                  style="margin-bottom: 2rem;"
-                  netlify
-                  name="email-signup"
-                  method="POST">
-                <input type="email"
-                       name="email"
-                       placeholder="Enter your email address"
-                       required
-                       style="width: 100%; padding: 1rem; border-radius: 10px; border: 1px solid var(--glass-border); background: var(--glass-bg); color: var(--text-light); margin-bottom: 1rem; font-size: 1rem;">
-                <button type="submit"
-                        class="btn btn-primary"
-                        style="width: 100%;">
-                    Notify Me When Available
-                </button>
-            </form>
+            <a href="https://play.google.com/store/apps/details?id=com.proviska.cmdsharp" target="_blank" class="btn btn-primary" style="width: 100%; display: flex; align-items: center; justify-content: center; gap: 1rem; margin-bottom: 2rem; padding: 1.5rem 2rem;">
+                <img src="images/google-play.png" alt="Get it on Google Play" style="height: 40px;">
+                Get it on Google Play
+            </a>
 
             <ul class="features-list" style="margin-bottom: 2rem;">
-                <li>Lightning-fast shortcut system</li>
+                <li>Lightning-fast 6-second invoicing</li>
                 <li>Advanced voice recognition</li>
                 <li>Professional PDF generation</li>
                 <li>Business intelligence dashboard</li>
                 <li>Customer & service management</li>
-                <li>Available on Google Play Store</li>
+                <li>7-day free trial included</li>
             </ul>
 
-            <p class="launch-note" style="color: var(--text-muted); font-size: 0.9rem;">
-                Expected launch: September 2025
+            <p class="launch-note" style="color: var(--neon-green); font-size: 1rem; font-weight: 600;">
+                ⚡ Now Live on Google Play Store
             </p>
         </div>
     </section>
@@ -1980,10 +1968,10 @@
                 Ready to Revolutionize Your Invoicing with AI?
             </h2>
             <p style="color: var(--primary-dark); font-size: 1.2rem; margin-bottom: 2rem; opacity: 0.9;">
-                Be among the first to experience revolutionary voice invoicing
+                Start your free trial today and experience the future of invoicing
             </p>
-            <a href="#pricing" class="btn" style="background: var(--primary-dark); color: var(--neon-green); padding: 1rem 2rem; font-weight: 600;">
-                Get Notified
+            <a href="https://play.google.com/store/apps/details?id=com.proviska.cmdsharp" target="_blank" class="btn" style="background: var(--primary-dark); color: var(--neon-green); padding: 1rem 2rem; font-weight: 600;">
+                Download Now
             </a>
         </div>
     </section>
