--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://ai.proviska.com">
     <link rel="dns-prefetch" href="https://checkout.cmdsharp.com">
     
-    <title>CmdSharp - AI Invoicing Software | Voice-Powered Invoice Generator</title>
+    <title>CmdSharp - AI Invoicing App | Voice-Powered Invoice Generator</title>
     <meta name="description" content="Fast invoice app for freelancers & trades — voice or smart command billing. Create invoices in under 10 seconds using your voice or smart commands. Download CmdSharp for Android.">
     <link rel="icon" href="images/favicon.ico" />
     <meta name="theme-color" content="#1a1a2e" />
@@ -1506,7 +1506,7 @@
     <section class="hero">
         <div class="hero-content">
             <!-- <div class="hero-badge">🚀 Revolutionary AI Invoicing</div> -->
-            <h1>CmdSharp - command your invoicing</h1>
+            <h1>CmdSharp - Invoicing App</h1>
             <p class="hero-subtitle">
                 Create professional invoices in 6-11 seconds with voice commands and intelligent shortcuts.
                 The future of business automation is here.
